RESOLVED FIXED104785
[TexMap] Uninitialized m_context pointer in TextureMapper
https://bugs.webkit.org/show_bug.cgi?id=104785
Summary [TexMap] Uninitialized m_context pointer in TextureMapper
Allan Sandfeld Jensen
Reported 2012-12-12 02:24:27 PST
The m_context pointer is defined in TextureMapper, but only initialized in one of its derived classes.
Attachments
Patch (2.14 KB, patch)
2012-12-12 02:25 PST, Allan Sandfeld Jensen
kenneth: review+
Allan Sandfeld Jensen
Comment 1 2012-12-12 02:25:31 PST
Allan Sandfeld Jensen
Comment 2 2012-12-12 02:45:54 PST
Dongseong Hwang
Comment 3 2012-12-17 20:26:26 PST
This patch causes crash. I filed Bug 103854.
Note You need to log in before you can comment on or make changes to this bug.