[TexMap] Uninitialized m_context pointer in TextureMapper https://bugs.webkit.org/show_bug.cgi?id=104785

Reviewed by Kenneth Rohde Christiansen.

* platform/graphics/texmap/TextureMapper.cpp:
(WebCore::TextureMapper::TextureMapper):
* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::TextureMapperGL):

Canonical link: https://commits.webkit.org/122997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137442 268f45cc-cd09-0410-ab3c-d52691b4dbfc