Source/WebCore/platform/graphics/texmap/TextureMapper.cpp
@@ -138,6 +138,7 @@ TextureMapper::TextureMapper(AccelerationMode accelerationMode)
     : m_interpolationQuality(InterpolationDefault)
     , m_textDrawingMode(TextModeFill)
     , m_texturePool(adoptPtr(new BitmapTexturePool()))
+    , m_context(0)
     , m_accelerationMode(accelerationMode)
 { }
 
